# llvm-project

mlir/: CMakeLists.txt
mlir/include/mlir/: InitAllPasses.h
mlir/include/mlir/Conversion/GPUToMetal/: ConvertGPUToMetalPass.h
mlir/lib/Conversion/: CMakeLists.txt
mlir/lib/Conversion/GPUToMetal/: CMakeLists.txt  ConvertLaunchFuncToMetalCalls.cpp
mlir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir/test/Conversion/GPUToMetal/: invoke-metal.mlir
mlir/test/mlir-metal-runner/: addf.mlir  lit.local.cfg
mlir/tools/: CMakeLists.txt
mlir/tools/mlir-metal-runner/: CMakeLists.txt  MetalRuntime.cpp  MetalRuntime.h  MetalRuntime.mm  metal-runtime-wrappers.mm  mlir-metal-runner.mm
mlir/tools/mlir-opt/: CMakeLists.txt
mlir/tools/mlir-vulkan-runner/: CMakeLists.txt
